chapter one done.

--- a/quant/jch/jch.tex
+++ b/quant/jch/jch.tex
@@ -178,5 +178,16 @@ bad outcomes, the entire initial investment is lost.
 It's important to note that with futures, both the loss and gain are unbounded but with options, the 
 loss is bounded below by the amount paid for the options.
 \subsection{Arbitrageurs}
+Arbitrage involves locking in a riskless profit by simultaneously entering into transactions in two or
+more markets. A simple example of arbitrage involves selling and buying stocks listed in different
+markets in different currencies and profiting from the lag from the exchange rate. Small investors
+are left with neglegible profits in this scheme in light of transaction costs, but large investors
+make significant profits. Arbitrage opportunities don't last very long and such lags are temporary
+and fleeting.
+\subsection{Dangers}
+Sometimes, traders who have a mandate to be hedgers or arbitrageurs, become (by
+choice or ignorance) speculators; this can lead to disastrous effects. Risk management
+is an important part of trading firms and should be carried out without any negligence.
+\section{Chapter 2: Mechanics of Futures Markets}
 
 \end{document}
