--- a/cp/ppg/ppg.tex
+++ b/cp/ppg/ppg.tex
@@ -90,5 +90,31 @@ Some search algorithms are discussed below:
     {O(log(n))}
     {O(1)}
 \end{enumerate}
+\subsubsection*{Misc}
+\begin{enumerate}
+    \item The preferred formula for evaluating the middle point of
+    the interval in binary search is
+    $m = l + (r-l)/2$, and not
+    $m = (l+r)/2$, as the latter can suffer due to overflow.
+    \item Global variables can also be used to maintain a ``best value yet" while searching through a space with binary search. For ex. find the first element $\geq$ x in an array.
+    \item Problems where an array can be mapped to a boolean variable and is guarranteed to have either
+    \begin{enumerate}
+        \item F...FT...T or
+        \item T...TF...F
+    \end{enumerate}
+    and our aim is to find the boundary between true and false
+    values can be translated to a binary search problem, with 
+    the target as the point where the variable changes:
+    arr[i] != arr[i+1].
+    \item Remember the \texttt{break} statement in iterative binary search if the middle point element is equal to the target.
+\end{enumerate}
 \subsection{Sorting Algorithms}
+These algorithms rearrange a given array in ascending order. Various other orders can be achieved by modifying the comparison operator.
+\subsubsection*{Selection Sort}
+
+\subsubsection*{Bubble Sort}
+\subsubsection*{Insertion Sort}
+\subsubsection*{Quick Sort}
+\subsubsection*{Merge Sort}
+\subsubsection*{Radix/Counting Sort}
 \end{document} 
