--- a/cp/notes.tex
+++ b/cp/notes.tex
@@ -108,7 +108,8 @@ Without going into the non-trivial hierarchy of iterators, note that:
 \begin{itemize}
     \item \texttt{iter++} is supported by all iterators.
     \item \texttt{iter += n} is supported by random-access iterators, available with vectors and deques (and maybe others?).
-    \item \texttt{advance(iter,n)} is supported by all iterators: use this instead.
+    \item \texttt{void advance(iter,n)} is supported by all iterators: use this instead.
+    \item \texttt{iter next(iter,n)} and \texttt{iter prev(iter,n)} is supported by all iterators.
 \end{itemize}
 An iterator pointing at an element is ``corrupted" on removing the element.
 Hence, any useful data should be copied over from the iterator before removing the element.
